--- a/src/WarpSpace.Descriptions/WarpSpace.Descriptions.csproj
+++ b/src/WarpSpace.Descriptions/WarpSpace.Descriptions.csproj
@@ -47,6 +47,7 @@
     <Compile Include="ChassisType.cs" />
     <Compile Include="DamageDescription.cs" />
     <Compile Include="DamageType.cs" />
+    <Compile Include="Faction.cs" />
     <Compile Include="LandscapeType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RandomBoardGenerator.cs" />
