--- a/src/WarpSpace/WarpSpace.csproj
+++ b/src/WarpSpace/WarpSpace.csproj
@@ -58,20 +58,26 @@
     <Compile Include="Common\Spacial2DData.cs" />
     <Compile Include="Experiment\TileTransformer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UI\Gameplay\ShowOnlyWhenAUnitIsSelected.cs" />
+    <Compile Include="UI\Gameplay\WeaponButton.cs" />
     <Compile Include="Unity\DebugComponent.cs" />
-    <Compile Include="Unity\UI\Gameplay\WeaponButton.cs" />
     <Compile Include="Unity\World\Battle\Board\Component.cs" />
+    <Compile Include="Unity\World\Battle\Board\OutlinesWiring.cs" />
     <Compile Include="Unity\World\Battle\Board\TileCreationHelper.cs" />
+    <Compile Include="Unity\World\Battle\Board\TileHighlightsWiring.cs" />
     <Compile Include="Unity\World\Battle\Board\Tile\Component.cs" />
+    <Compile Include="Unity\World\Battle\Board\Tile\HighlightElement.cs" />
     <Compile Include="Unity\World\Battle\Board\Tile\Landscape\Component.cs" />
     <Compile Include="Unity\World\Battle\Board\Tile\Landscape\HighlightType.cs" />
     <Compile Include="Unity\World\Battle\Board\Tile\PlayerActionSource\Component.cs" />
     <Compile Include="Unity\World\Battle\Board\Tile\StructureSlot\Component.cs" />
     <Compile Include="Unity\World\Battle\Board\Tile\UnitSlot\Component.cs" />
     <Compile Include="Unity\World\Battle\Board\Tile\Water\Component.cs" />
+    <Compile Include="Unity\World\Battle\Board\UnitCreationWiring.cs" />
     <Compile Include="Unity\World\Battle\Component.cs" />
     <Compile Include="Unity\World\Battle\SettingsConversionExtensions.cs" />
     <Compile Include="Unity\World\Battle\Unit\Component.cs" />
+    <Compile Include="Unity\World\Battle\Unit\Mover.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Lanski.Behaviours\Lanski.Behaviours.csproj">
@@ -122,6 +128,9 @@
       <Project>{ba651769-958c-4def-b0ec-15c7a154f76b}</Project>
       <Name>WarpSpace.Models</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="UI" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
