--- a/src/WarpSpace/WarpSpace.csproj
+++ b/src/WarpSpace/WarpSpace.csproj
@@ -54,15 +54,18 @@
     <Compile Include="Common\MapParsing\MapParsingExtensions.cs" />
     <Compile Include="Common\MeshTransformation\MeshTransformer.cs" />
     <Compile Include="Common\Outline\OutlineMeshBuilder.cs" />
-    <Compile Include="Common\Outline\OutlinesInitializer.cs" />
     <Compile Include="Common\Spacial2DData.cs" />
     <Compile Include="Experiment\TileTransformer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UI\Common\ClickSource.cs" />
     <Compile Include="UI\Gameplay\ShowOnlyWhenAUnitIsSelected.cs" />
-    <Compile Include="UI\Gameplay\WeaponButton.cs" />
+    <Compile Include="UI\Gameplay\Units\HealthComponent.cs" />
+    <Compile Include="UI\Gameplay\Units\UiUnitComponent.cs" />
+    <Compile Include="UI\Gameplay\Units\UIUnitsComponent.cs" />
+    <Compile Include="UI\Gameplay\Weapon\WeaponClicksHandler.cs" />
+    <Compile Include="UI\Gameplay\Weapon\WeaponSelectionHighlight.cs" />
     <Compile Include="Unity\DebugComponent.cs" />
     <Compile Include="Unity\World\Battle\Board\Component.cs" />
-    <Compile Include="Unity\World\Battle\Board\OutlinesWiring.cs" />
     <Compile Include="Unity\World\Battle\Board\TileCreationHelper.cs" />
     <Compile Include="Unity\World\Battle\Board\TileHighlightsWiring.cs" />
     <Compile Include="Unity\World\Battle\Board\Tile\Component.cs" />
@@ -76,8 +79,10 @@
     <Compile Include="Unity\World\Battle\Board\UnitCreationWiring.cs" />
     <Compile Include="Unity\World\Battle\Component.cs" />
     <Compile Include="Unity\World\Battle\SettingsConversionExtensions.cs" />
-    <Compile Include="Unity\World\Battle\Unit\Component.cs" />
+    <Compile Include="Unity\World\Battle\Unit\MeshComponent.cs" />
     <Compile Include="Unity\World\Battle\Unit\Mover.cs" />
+    <Compile Include="Unity\World\Battle\Unit\OutlineComponent.cs" />
+    <Compile Include="Unity\World\Battle\Unit\UnitComponent.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Lanski.Behaviours\Lanski.Behaviours.csproj">
@@ -128,9 +133,6 @@
       <Project>{ba651769-958c-4def-b0ec-15c7a154f76b}</Project>
       <Name>WarpSpace.Models</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="UI" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
