--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,12 @@ build/
 Temp/
 Library/
 clips/
-Assets/behaviours/
-Assets/Editor/
+Warp_UnityProject/Assets/behaviours/*.dll
+Warp_UnityProject/Assets/behaviours/*.pdb
+Warp_UnityProject/Assets/behaviours/*.meta
+Warp_UnityProject/Assets/Editor/*.dll
+Warp_UnityProject/Assets/Editor/*.pdb
+Warp_UnityProject/Assets/Editor/*.meta
 src/PlanetRider/.vs
 **/obj/
 **/bin/
