--- a/Warp_UnityProject/Assembly-CSharp-Editor.csproj
+++ b/Warp_UnityProject/Assembly-CSharp-Editor.csproj
@@ -183,6 +183,9 @@
     <Reference Include="WarpSpace.UI">
       <HintPath>C:/dev/games/Warp/Warp_UnityProject/Assets/Scripts/WarpSpace.UI.dll</HintPath>
     </Reference>
+    <Reference Include="WarpSpace.Overlay">
+      <HintPath>C:/dev/games/Warp/Warp_UnityProject/Assets/Scripts/WarpSpace.Overlay.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="Assembly-CSharp-Editor-firstpass.csproj">
