--- a/src/WarpSpace.Overlay/WarpSpace.Overlay.csproj
+++ b/src/WarpSpace.Overlay/WarpSpace.Overlay.csproj
@@ -1,15 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{50A126F4-46C4-4748-BDDF-F9EAAAFD3E12}</ProjectGuid>
+    <ProjectGuid>{D52FBC89-2776-4599-A7B2-294D89EB8810}</ProjectGuid>
     <ProjectTypeGuids>{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>WarpSpace</RootNamespace>
-    <AssemblyName>WarpSpace</AssemblyName>
+    <RootNamespace>WarpSpace.Overlay</RootNamespace>
+    <AssemblyName>WarpSpace.Overlay</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -18,7 +18,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\Warp_UnityProject\Assets\Scripts</OutputPath>
+    <OutputPath>..\..\Warp_UnityProject\Assets\Scripts\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -27,7 +27,7 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\..\Warp_UnityProject\Assets\Scripts</OutputPath>
+    <OutputPath>..\..\Warp_UnityProject\Assets\Scripts\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -47,53 +47,19 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Experiment\TileTransformer.cs" />
-    <Compile Include="Game\Battle\Board\Tile\HighlightType.cs" />
-    <Compile Include="Game\Battle\Board\Tile\Landscape.cs" />
-    <Compile Include="Game\Battle\Board\Tile\PlayerActionSource.cs" />
-    <Compile Include="Game\Battle\Board\Tile\StructureSlot.cs" />
-    <Compile Include="Game\Battle\Board\Tile\UnitSlot.cs" />
-    <Compile Include="Game\Battle\Board\Tile\Water.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\DebugComponent.cs" />
-    <Compile Include="Services\UnityRandom.cs" />
-    <Compile Include="Game\Battle\Board\BoardComponent.cs" />
-    <Compile Include="Game\Battle\Board\TileCreationHelper.cs" />
-    <Compile Include="Game\Battle\Board\TileHighlightsWiring.cs" />
-    <Compile Include="Game\Battle\Board\Tile\HighlightElement.cs" />
-    <Compile Include="Game\Battle\Board\Tile\TileComponent.cs" />
-    <Compile Include="Game\Battle\Board\UnitCreationWiring.cs" />
-    <Compile Include="Game\Battle\BattleComponent.cs" />
-    <Compile Include="Game\Battle\SettingsConversionExtensions.cs" />
-    <Compile Include="Game\Battle\Unit\UnitMesh.cs" />
-    <Compile Include="Game\Battle\Unit\Mover.cs" />
-    <Compile Include="Game\Battle\Unit\Outline.cs" />
-    <Compile Include="Game\Battle\Unit\UnitComponent.cs" />
+    <Compile Include="Units\Health.cs" />
+    <Compile Include="Units\Unit.cs" />
+    <Compile Include="Units\UnitsComponent.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Lanski.Behaviours\Lanski.Behaviours.csproj">
-      <Project>{062EC63A-CE31-4FB1-BF65-0F65A1B3E6FB}</Project>
-      <Name>Lanski.Behaviours</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Lanski.Geometry\Lanski.Geometry.csproj">
       <Project>{D581D1F2-8332-44D4-8799-0C0E1690635C}</Project>
       <Name>Lanski.Geometry</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Lanski.Linq\Lanski.Linq.csproj">
-      <Project>{044D53C7-AFD3-4FD0-9E0D-63FF7CD1DFC0}</Project>
-      <Name>Lanski.Linq</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Lanski.Maths\Lanski.Maths.csproj">
-      <Project>{1B27FC2D-E60E-4503-9EA7-0B655BBBAF41}</Project>
-      <Name>Lanski.Maths</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Lanski.Reactive\Lanski.Reactive.csproj">
       <Project>{227702C3-257D-432F-9AE9-7D49A34EBBDF}</Project>
       <Name>Lanski.Reactive</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Lanski.Sharp7\Lanski.Sharp7.csproj">
-      <Project>{8c681d57-a09d-4f42-a6ec-81e2e0ffa882}</Project>
-      <Name>Lanski.Sharp7</Name>
     </ProjectReference>
     <ProjectReference Include="..\Lanski.Structures\Lanski.Structures.csproj">
       <Project>{ECA31E07-DC35-46FC-9C5B-F0F32F9152B1}</Project>
@@ -103,21 +69,17 @@
       <Project>{56177DAE-76CF-4796-A02D-F4C0833CF22C}</Project>
       <Name>Lanski.UnityExtensions</Name>
     </ProjectReference>
-    <ProjectReference Include="..\UnityEditor.Expose\UnityEditor.Expose.csproj">
-      <Project>{97420AF8-F6A9-428F-AD26-802FAD489D7B}</Project>
-      <Name>UnityEditor.Expose</Name>
-    </ProjectReference>
     <ProjectReference Include="..\WarpSpace.Common\WarpSpace.Common.csproj">
       <Project>{8151E833-B7CD-4CD5-8CE0-4B0EF66B89F3}</Project>
       <Name>WarpSpace.Common</Name>
     </ProjectReference>
-    <ProjectReference Include="..\WarpSpace.Descriptions\WarpSpace.Descriptions.csproj">
-      <Project>{0127FC72-7C5D-434B-8EFE-4313ED9824E0}</Project>
-      <Name>WarpSpace.Descriptions</Name>
-    </ProjectReference>
     <ProjectReference Include="..\WarpSpace.Models\WarpSpace.Models.csproj">
-      <Project>{ba651769-958c-4def-b0ec-15c7a154f76b}</Project>
+      <Project>{BA651769-958C-4DEF-B0EC-15C7A154F76B}</Project>
       <Name>WarpSpace.Models</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\WarpSpace\WarpSpace.csproj">
+      <Project>{50A126F4-46C4-4748-BDDF-F9EAAAFD3E12}</Project>
+      <Name>WarpSpace</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
