--- a/src/Lanski.UnityExtensions/Lanski.UnityExtensions.csproj
+++ b/src/Lanski.UnityExtensions/Lanski.UnityExtensions.csproj
@@ -42,6 +42,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GameObjectExtensions.cs" />
     <Compile Include="MonoBehaviourChildrenExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Optional.cs" />
