--- a/src/WarpSpace.Test.Console/WarpSpace.Test.Console.csproj
+++ b/src/WarpSpace.Test.Console/WarpSpace.Test.Console.csproj
@@ -1,15 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{227702C3-257D-432F-9AE9-7D49A34EBBDF}</ProjectGuid>
+    <ProjectGuid>{F766D575-E76C-458E-93BA-6BDF87F87DD7}</ProjectGuid>
     <ProjectTypeGuids>{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <OutputType>Library</OutputType>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Lanski.Reactive</RootNamespace>
-    <AssemblyName>Lanski.Reactive</AssemblyName>
+    <RootNamespace>WarpSpace.Test.Console</RootNamespace>
+    <AssemblyName>WarpSpace.Test.Console</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -35,41 +35,23 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ChangeStream.cs" />
-    <Compile Include="EmptyStream.cs" />
-    <Compile Include="GuardedCell.cs" />
-    <Compile Include="GuardedStream.cs" />
-    <Compile Include="NullableCell.cs" />
-    <Compile Include="NullableCellExtensions.cs" />
-    <Compile Include="NullableStreamExtensions.cs" />
-    <Compile Include="Cell.cs" />
-    <Compile Include="CellExtensions.cs" />
-    <Compile Include="ICell.cs" />
-    <Compile Include="IConsumer.cs" />
-    <Compile Include="IStream.cs" />
-    <Compile Include="LastValueRepeatStream.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RepeatAllStream.cs" />
-    <Compile Include="Signal.cs" />
-    <Compile Include="EventsGuard.cs" />
-    <Compile Include="Stream.cs" />
-    <Compile Include="StreamExtensions.cs" />
-    <Compile Include="StreamMergeExtensions.cs" />
-    <Compile Include="ValueCell.cs" />
-    <Compile Include="VoidStreamExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Lanski.Sharp7\Lanski.Sharp7.csproj">
-      <Project>{8c681d57-a09d-4f42-a6ec-81e2e0ffa882}</Project>
-      <Name>Lanski.Sharp7</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Lanski.Structures\Lanski.Structures.csproj">
       <Project>{ECA31E07-DC35-46FC-9C5B-F0F32F9152B1}</Project>
       <Name>Lanski.Structures</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\WarpSpace.Models\WarpSpace.Models.csproj">
+      <Project>{BA651769-958C-4DEF-B0EC-15C7A154F76B}</Project>
+      <Name>WarpSpace.Models</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
