--- a/src/WarpSpace.Models/WarpSpace.Models.csproj
+++ b/src/WarpSpace.Models/WarpSpace.Models.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Descriptions\ChassisType.cs" />
     <Compile Include="Descriptions\Damage.cs" />
     <Compile Include="Descriptions\DamageType.cs" />
+    <Compile Include="Descriptions\DUnitAction.cs" />
     <Compile Include="Descriptions\Faction.cs" />
     <Compile Include="Descriptions\Stuff.cs" />
     <Compile Include="Descriptions\LandscapeType.cs" />
@@ -58,12 +59,16 @@
     <Compile Include="Descriptions\UnitDescription.cs" />
     <Compile Include="Descriptions\UnitType.cs" />
     <Compile Include="Descriptions\WeaponType.cs" />
-    <Compile Include="Game\Battle\Board\MothershipExited.cs" />
     <Compile Include="Game\Battle\Board\UnitFactory.cs" />
     <Compile Include="Game\Battle\Board\Unit\HealthState.cs" />
+    <Compile Include="Game\Battle\Board\Unit\MActionsContainer.cs" />
     <Compile Include="Game\Battle\Board\Unit\MDestructor.cs" />
+    <Compile Include="Game\Battle\Board\Unit\MDocker.cs" />
     <Compile Include="Game\Battle\Board\Unit\MInteractor.cs" />
     <Compile Include="Game\Battle\Board\Unit\MLooter.cs" />
+    <Compile Include="Game\Battle\Board\Unit\MUnitAction.cs" />
+    <Compile Include="Game\Battle\Board\Unit\MUsesLimiter.cs" />
+    <Compile Include="Game\Battle\Board\Unit\UnitCommand.cs" />
     <Compile Include="StreamCache.cs" />
     <Compile Include="Game\Battle\Board\MBoard.cs" />
     <Compile Include="Game\Battle\Board\Structure\StructureDestroyed.cs" />
@@ -73,14 +78,13 @@
     <Compile Include="Game\Battle\Board\Tile\TileSite.cs" />
     <Compile Include="Game\Battle\Board\Tile\Movement.cs" />
     <Compile Include="Game\Battle\Board\Unit\MBay.cs" />
-    <Compile Include="Game\Battle\Board\Unit\MChassis.cs" />
+    <Compile Include="Game\Battle\Board\Unit\MMover.cs" />
     <Compile Include="Game\Battle\Board\Unit\MHealth.cs" />
     <Compile Include="Game\Battle\Board\Unit\MInventory.cs" />
     <Compile Include="Game\Battle\Board\Unit\MUnit.cs" />
     <Compile Include="Game\Battle\MBattle.cs" />
     <Compile Include="Game\Battle\Board\Unit\MLocation.cs" />
     <Compile Include="Game\Battle\Board\Weapon\MWeapon.cs" />
-    <Compile Include="Game\Battle\Player\Command.cs" />
     <Compile Include="Game\Battle\Player\MPlayer.cs" />
     <Compile Include="Game\Battle\RandomBoardGenerator.cs" />
     <Compile Include="Game\MGame.cs" />
