*scriptable objects for predefined maps *landscape highlight as a separate object *fixed outlines

--- a/src/WarpSpace.Test.Console/WarpSpace.Test.Console.csproj
+++ b/src/WarpSpace.Test.Console/WarpSpace.Test.Console.csproj
@@ -42,6 +42,9 @@
     <Reference Include="UnityEditor, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
       <HintPath>..\..\lib\UnityEditor.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\..\lib\UnityEngine.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
