--- a/Warp_UnityProject/Assembly-CSharp-Editor-firstpass.csproj
+++ b/Warp_UnityProject/Assembly-CSharp-Editor-firstpass.csproj
@@ -13,7 +13,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <AssemblyName>Assembly-CSharp-Editor-firstpass</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <BaseDirectory>Assets</BaseDirectory>
   </PropertyGroup>
@@ -22,7 +22,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>Temp\bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE;UNITY_5_3_OR_NEWER;UNITY_5_4_OR_NEWER;UNITY_5_5_OR_NEWER;UNITY_5_6_OR_NEWER;UNITY_2017_1_OR_NEWER;UNITY_2017_1_0;UNITY_2017_1;UNITY_2017;ENABLE_AUDIO;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_GENERICS;ENABLE_PVR_GI;ENABLE_MICROPHONE;ENABLE_MULTIPLE_DISPLAYS;ENABLE_PHYSICS;ENABLE_RUNTIME_NAVMESH_BUILDING;ENABLE_SPRITERENDERER_FLIPPING;ENABLE_SPRITES;ENABLE_TERRAIN;ENABLE_RAKNET;ENABLE_DIRECTOR;ENABLE_UNET;ENABLE_LZMA;ENABLE_UNITYEVENTS;ENABLE_WEBCAM;ENABLE_WWW;ENABLE_CLOUD_SERVICES_COLLAB;ENABLE_CLOUD_SERVICES_COLLAB_SOFTLOCKS;ENABLE_CLOUD_HUB;ENABLE_CLOUD_PROJECT_ID;ENABLE_CLOUD_SERVICES_USE_WEBREQUEST;ENABLE_CLOUD_SERVICES_UNET;ENABLE_CLOUD_SERVICES_BUILD;ENABLE_CLOUD_LICENSE;ENABLE_WEBSOCKET_CLIENT;ENABLE_DIRECTOR_AUDIO;ENABLE_TIMELINE;ENABLE_EDITOR_METRICS;ENABLE_EDITOR_METRICS_CACHING;ENABLE_NATIVE_ARRAY;ENABLE_SPRITE_MASKING;INCLUDE_DYNAMIC_GI;INCLUDE_GI;ENABLE_MONO_BDWGC;PLATFORM_SUPPORTS_MONO;INCLUDE_PUBNUB;ENABLE_PLAYMODE_TESTS_RUNNER;ENABLE_VIDEO;ENABLE_RMGUI;ENABLE_CUSTOM_RENDER_TEXTURE;ENABLE_STYLE_SHEETS;ENABLE_RUNTIME_GI;ENABLE_SUBSTANCE;ENABLE_GAMECENTER;ENABLE_NETWORK;ENABLE_UNITYWEBREQUEST;ENABLE_CLOUD_SERVICES;ENABLE_CLOUD_SERVICES_ADS;ENABLE_CLOUD_SERVICES_ANALYTICS;ENABLE_CLOUD_SERVICES_PURCHASING;ENABLE_CLOUD_SERVICES_CRASH_REPORTING;ENABLE_CLOUD_SERVICES_IOS_NATIVE_CRASH_REPORTING;PLAYERCONNECTION_LISTENS_FIXED_PORT;DEBUGGER_LISTENS_FIXED_PORT;PLATFORM_SUPPORTS_ADS_ID;SUPPORT_ENVIRONMENT_VARIABLES;PLATFORM_SUPPORTS_PROFILER;PLATFORM_HAS_NO_SUPPORT_FOR_BUCKET_ALLOCATOR;STRICTCPP_NEW_DELETE_SIGNATURES;HAS_NEON_SKINNIG;UNITY_GFX_USE_PLATFORM_VSYNC;UNITY_INPUT_SIMULATE_EVENTS;PLATFORM_ALWAYS_USES_STDOUT_FOR_LOG;ENABLE_VR;ENABLE_UNITYADS_RUNTIME;UNITY_UNITYADS_API;PLATFORM_IOS;UNITY_IOS;PLATFORM_IPHONE;UNITY_IPHONE;UNITY_IPHONE_API;SUPPORT_MULTIPLE_DISPLAYS;ENABLE_IL2CPP;NET_4_6;ENABLE_PROFILER;UNITY_ASSERTIONS;UNITY_EDITOR;UNITY_EDITOR_64;UNITY_EDITOR_OSX;ENABLE_NATIVE_ARRAY_CHECKS;UNITY_TEAM_LICENSE;ENABLE_IOS_ON_DEMAND_RESOURCES;ENABLE_IOS_APP_SLICING;UNITY_HAS_GOOGLEVR;ENABLE_MONO</DefineConstants>
+    <DefineConstants>DEBUG;TRACE;UNITY_5_3_OR_NEWER;UNITY_5_4_OR_NEWER;UNITY_5_5_OR_NEWER;UNITY_5_6_OR_NEWER;UNITY_2017_1_OR_NEWER;UNITY_2017_1_0;UNITY_2017_1;UNITY_2017;PLATFORM_ARCH_64;UNITY_64;ENABLE_AUDIO;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_DUCK_TYPING;ENABLE_GENERICS;ENABLE_PVR_GI;ENABLE_MICROPHONE;ENABLE_MULTIPLE_DISPLAYS;ENABLE_PHYSICS;ENABLE_RUNTIME_NAVMESH_BUILDING;ENABLE_SPRITERENDERER_FLIPPING;ENABLE_SPRITES;ENABLE_TERRAIN;ENABLE_RAKNET;ENABLE_DIRECTOR;ENABLE_UNET;ENABLE_LZMA;ENABLE_UNITYEVENTS;ENABLE_WEBCAM;ENABLE_WWW;ENABLE_CLOUD_SERVICES_COLLAB;ENABLE_CLOUD_SERVICES_COLLAB_SOFTLOCKS;ENABLE_CLOUD_SERVICES_ADS;ENABLE_CLOUD_HUB;ENABLE_CLOUD_PROJECT_ID;ENABLE_CLOUD_SERVICES_USE_WEBREQUEST;ENABLE_CLOUD_SERVICES_UNET;ENABLE_CLOUD_SERVICES_BUILD;ENABLE_CLOUD_LICENSE;ENABLE_WEBSOCKET_CLIENT;ENABLE_DIRECTOR_AUDIO;ENABLE_TIMELINE;ENABLE_EDITOR_METRICS;ENABLE_EDITOR_METRICS_CACHING;ENABLE_NATIVE_ARRAY;ENABLE_SPRITE_MASKING;INCLUDE_DYNAMIC_GI;INCLUDE_GI;ENABLE_MONO_BDWGC;PLATFORM_SUPPORTS_MONO;RENDER_SOFTWARE_CURSOR;INCLUDE_PUBNUB;ENABLE_PLAYMODE_TESTS_RUNNER;ENABLE_VIDEO;ENABLE_RMGUI;ENABLE_CUSTOM_RENDER_TEXTURE;ENABLE_STYLE_SHEETS;UNITY_STANDALONE_WIN;UNITY_STANDALONE;ENABLE_SUBSTANCE;ENABLE_RUNTIME_GI;ENABLE_MOVIES;ENABLE_NETWORK;ENABLE_CRUNCH_TEXTURE_COMPRESSION;ENABLE_UNITYWEBREQUEST;ENABLE_CLOUD_SERVICES;ENABLE_CLOUD_SERVICES_ANALYTICS;ENABLE_CLOUD_SERVICES_PURCHASING;ENABLE_CLOUD_SERVICES_CRASH_REPORTING;ENABLE_EVENT_QUEUE;ENABLE_CLUSTERINPUT;ENABLE_VR;ENABLE_WEBSOCKET_HOST;ENABLE_MONO;NET_4_6;ENABLE_PROFILER;UNITY_ASSERTIONS;UNITY_EDITOR;UNITY_EDITOR_64;UNITY_EDITOR_WIN;ENABLE_NATIVE_ARRAY_CHECKS;UNITY_TEAM_LICENSE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <NoWarn>0169</NoWarn>
@@ -44,10 +44,10 @@
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="UnityEngine">
-      <HintPath>/Applications/Unity/Unity.app/Contents/Managed/UnityEngine.dll</HintPath>
+      <HintPath>C:/Program Files/Unity/Editor/Data/Managed/UnityEngine.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor">
-      <HintPath>/Applications/Unity/Unity.app/Contents/Managed/UnityEditor.dll</HintPath>
+      <HintPath>C:/Program Files/Unity/Editor/Data/Managed/UnityEditor.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -56,138 +56,129 @@
     <None Include="Assets\Materials\Shaders\common.cginc" />
     <None Include="Assets\Materials\Shaders\Outline.shader" />
     <None Include="Assets\Materials\Shaders\IsometricSpecular.shader" />
-    <None Include="Assets\Materials\Shaders\IsometricStriped.shader" />
-    <None Include="Assets\Materials\Shaders\IsometricUnitPlaceholder.shader" />
+    <None Include="Assets\Materials\Shaders\Striped.shader" />
+    <None Include="Assets\Materials\Shaders\Circle.shader" />
     <None Include="Assets\Materials\Shaders\Opaque.shader" />
     <None Include="Assets\Materials\Shaders\Isometric.shader" />
     <Reference Include="UnityEditor.Advertisements">
-      <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/Advertisements/Editor/UnityEditor.Advertisements.dll</HintPath>
+      <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/Advertisements/Editor/UnityEditor.Advertisements.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.UI">
-      <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
+      <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor.UI">
-      <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/GUISystem/Editor/UnityEditor.UI.dll</HintPath>
+      <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/Editor/UnityEditor.UI.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.Networking">
-      <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/Networking/UnityEngine.Networking.dll</HintPath>
+      <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/Networking/UnityEngine.Networking.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor.Networking">
-      <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/Networking/Editor/UnityEditor.Networking.dll</HintPath>
+      <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/Networking/Editor/UnityEditor.Networking.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor.TestRunner">
-      <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/TestRunner/Editor/UnityEditor.TestRunner.dll</HintPath>
+      <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/TestRunner/Editor/UnityEditor.TestRunner.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.TestRunner">
-      <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/TestRunner/UnityEngine.TestRunner.dll</HintPath>
+      <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/TestRunner/UnityEngine.TestRunner.dll</HintPath>
     </Reference>
     <Reference Include="nunit.framework">
-      <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/TestRunner/net35/unity-custom/nunit.framework.dll</HintPath>
+      <HintPath>C:\Program Files\Unity\Editor\Data/Managed/nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.Timeline">
-      <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/Timeline/RuntimeEditor/UnityEngine.Timeline.dll</HintPath>
+      <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/Timeline/RuntimeEditor/UnityEngine.Timeline.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor.Timeline">
-      <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/Timeline/Editor/UnityEditor.Timeline.dll</HintPath>
+      <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/Timeline/Editor/UnityEditor.Timeline.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor.TreeEditor">
-      <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/TreeEditor/Editor/UnityEditor.TreeEditor.dll</HintPath>
+      <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/TreeEditor/Editor/UnityEditor.TreeEditor.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.Analytics">
-      <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/UnityAnalytics/UnityEngine.Analytics.dll</HintPath>
+      <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/UnityAnalytics/UnityEngine.Analytics.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor.Analytics">
-      <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/UnityAnalytics/Editor/UnityEditor.Analytics.dll</HintPath>
+      <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/UnityAnalytics/Editor/UnityEditor.Analytics.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor.HoloLens">
-      <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/UnityHoloLens/Editor/UnityEditor.HoloLens.dll</HintPath>
+      <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/UnityHoloLens/Editor/UnityEditor.HoloLens.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.HoloLens">
-      <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/UnityHoloLens/RuntimeEditor/UnityEngine.HoloLens.dll</HintPath>
+      <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/UnityHoloLens/RuntimeEditor/UnityEngine.HoloLens.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor.Purchasing">
-      <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/UnityPurchasing/Editor/UnityEditor.Purchasing.dll</HintPath>
+      <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/UnityPurchasing/Editor/UnityEditor.Purchasing.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor.VR">
-      <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/UnityVR/Editor/UnityEditor.VR.dll</HintPath>
+      <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/UnityVR/Editor/UnityEditor.VR.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor.Graphs">
-      <HintPath>/Applications/Unity/Unity.app/Contents/Managed/UnityEditor.Graphs.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEditor.Android.Extensions">
-      <HintPath>/Applications/Unity/PlaybackEngines/AndroidPlayer/UnityEditor.Android.Extensions.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEditor.iOS.Extensions">
-      <HintPath>/Applications/Unity/PlaybackEngines/iOSSupport/UnityEditor.iOS.Extensions.dll</HintPath>
+      <HintPath>C:/Program Files/Unity/Editor/Data/Managed/UnityEditor.Graphs.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor.WindowsStandalone.Extensions">
-      <HintPath>/Applications/Unity/PlaybackEngines/WindowsStandaloneSupport/UnityEditor.WindowsStandalone.Extensions.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEditor.OSXStandalone.Extensions">
-      <HintPath>/Applications/Unity/Unity.app/Contents/PlaybackEngines/MacStandaloneSupport/UnityEditor.OSXStandalone.Extensions.dll</HintPath>
+      <HintPath>C:/Program Files/Unity/Editor/Data/PlaybackEngines/windowsstandalonesupport/UnityEditor.WindowsStandalone.Extensions.dll</HintPath>
     </Reference>
     <Reference Include="Lanski.Maths">
-      <HintPath>/Users/dmitrijegorov/dev/games/IsometricWarp/Warp_UnityProject/Assets/Editor/Lanski.Maths.dll</HintPath>
+      <HintPath>C:/dev/games/Warp/Warp_UnityProject/Assets/Editor/Lanski.Maths.dll</HintPath>
     </Reference>
     <Reference Include="Lanski.Reactive">
-      <HintPath>/Users/dmitrijegorov/dev/games/IsometricWarp/Warp_UnityProject/Assets/Editor/Lanski.Reactive.dll</HintPath>
+      <HintPath>C:/dev/games/Warp/Warp_UnityProject/Assets/Editor/Lanski.Reactive.dll</HintPath>
     </Reference>
     <Reference Include="Lanski.Reflection">
-      <HintPath>/Users/dmitrijegorov/dev/games/IsometricWarp/Warp_UnityProject/Assets/Editor/Lanski.Reflection.dll</HintPath>
+      <HintPath>C:/dev/games/Warp/Warp_UnityProject/Assets/Editor/Lanski.Reflection.dll</HintPath>
     </Reference>
     <Reference Include="Lanski.Sharp7">
-      <HintPath>/Users/dmitrijegorov/dev/games/IsometricWarp/Warp_UnityProject/Assets/Editor/Lanski.Sharp7.dll</HintPath>
+      <HintPath>C:/dev/games/Warp/Warp_UnityProject/Assets/Editor/Lanski.Sharp7.dll</HintPath>
     </Reference>
     <Reference Include="Lanski.Structures">
-      <HintPath>/Users/dmitrijegorov/dev/games/IsometricWarp/Warp_UnityProject/Assets/Editor/Lanski.Structures.dll</HintPath>
+      <HintPath>C:/dev/games/Warp/Warp_UnityProject/Assets/Editor/Lanski.Structures.dll</HintPath>
     </Reference>
     <Reference Include="Lanski.SwiftLinq">
-      <HintPath>/Users/dmitrijegorov/dev/games/IsometricWarp/Warp_UnityProject/Assets/Editor/Lanski.SwiftLinq.dll</HintPath>
+      <HintPath>C:/dev/games/Warp/Warp_UnityProject/Assets/Editor/Lanski.SwiftLinq.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor.Expose">
-      <HintPath>/Users/dmitrijegorov/dev/games/IsometricWarp/Warp_UnityProject/Assets/Editor/UnityEditor.Expose.dll</HintPath>
+      <HintPath>C:/dev/games/Warp/Warp_UnityProject/Assets/Editor/UnityEditor.Expose.dll</HintPath>
     </Reference>
     <Reference Include="WarpSpace.Editors">
-      <HintPath>/Users/dmitrijegorov/dev/games/IsometricWarp/Warp_UnityProject/Assets/Editor/WarpSpace.Editors.dll</HintPath>
+      <HintPath>C:/dev/games/Warp/Warp_UnityProject/Assets/Editor/WarpSpace.Editors.dll</HintPath>
     </Reference>
     <Reference Include="Lanski.Behaviours">
-      <HintPath>/Users/dmitrijegorov/dev/games/IsometricWarp/Warp_UnityProject/Assets/Scripts/Lanski.Behaviours.dll</HintPath>
+      <HintPath>C:/dev/games/Warp/Warp_UnityProject/Assets/Scripts/Lanski.Behaviours.dll</HintPath>
     </Reference>
     <Reference Include="Lanski.Geometry">
-      <HintPath>/Users/dmitrijegorov/dev/games/IsometricWarp/Warp_UnityProject/Assets/Scripts/Lanski.Geometry.dll</HintPath>
+      <HintPath>C:/dev/games/Warp/Warp_UnityProject/Assets/Scripts/Lanski.Geometry.dll</HintPath>
     </Reference>
     <Reference Include="Lanski.Linq">
-      <HintPath>/Users/dmitrijegorov/dev/games/IsometricWarp/Warp_UnityProject/Assets/Scripts/Lanski.Linq.dll</HintPath>
+      <HintPath>C:/dev/games/Warp/Warp_UnityProject/Assets/Scripts/Lanski.Linq.dll</HintPath>
     </Reference>
     <Reference Include="Lanski.Maths">
-      <HintPath>/Users/dmitrijegorov/dev/games/IsometricWarp/Warp_UnityProject/Assets/Scripts/Lanski.Maths.dll</HintPath>
+      <HintPath>C:/dev/games/Warp/Warp_UnityProject/Assets/Scripts/Lanski.Maths.dll</HintPath>
     </Reference>
     <Reference Include="Lanski.Reactive">
-      <HintPath>/Users/dmitrijegorov/dev/games/IsometricWarp/Warp_UnityProject/Assets/Scripts/Lanski.Reactive.dll</HintPath>
+      <HintPath>C:/dev/games/Warp/Warp_UnityProject/Assets/Scripts/Lanski.Reactive.dll</HintPath>
     </Reference>
     <Reference Include="Lanski.Reflection">
-      <HintPath>/Users/dmitrijegorov/dev/games/IsometricWarp/Warp_UnityProject/Assets/Scripts/Lanski.Reflection.dll</HintPath>
+      <HintPath>C:/dev/games/Warp/Warp_UnityProject/Assets/Scripts/Lanski.Reflection.dll</HintPath>
     </Reference>
     <Reference Include="Lanski.Sharp7">
-      <HintPath>/Users/dmitrijegorov/dev/games/IsometricWarp/Warp_UnityProject/Assets/Scripts/Lanski.Sharp7.dll</HintPath>
+      <HintPath>C:/dev/games/Warp/Warp_UnityProject/Assets/Scripts/Lanski.Sharp7.dll</HintPath>
     </Reference>
     <Reference Include="Lanski.Structures">
-      <HintPath>/Users/dmitrijegorov/dev/games/IsometricWarp/Warp_UnityProject/Assets/Scripts/Lanski.Structures.dll</HintPath>
+      <HintPath>C:/dev/games/Warp/Warp_UnityProject/Assets/Scripts/Lanski.Structures.dll</HintPath>
     </Reference>
     <Reference Include="Lanski.SwiftLinq">
-      <HintPath>/Users/dmitrijegorov/dev/games/IsometricWarp/Warp_UnityProject/Assets/Scripts/Lanski.SwiftLinq.dll</HintPath>
+      <HintPath>C:/dev/games/Warp/Warp_UnityProject/Assets/Scripts/Lanski.SwiftLinq.dll</HintPath>
     </Reference>
     <Reference Include="Lanski.UnityExtensions">
-      <HintPath>/Users/dmitrijegorov/dev/games/IsometricWarp/Warp_UnityProject/Assets/Scripts/Lanski.UnityExtensions.dll</HintPath>
+      <HintPath>C:/dev/games/Warp/Warp_UnityProject/Assets/Scripts/Lanski.UnityExtensions.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor.Expose">
-      <HintPath>/Users/dmitrijegorov/dev/games/IsometricWarp/Warp_UnityProject/Assets/Scripts/UnityEditor.Expose.dll</HintPath>
+      <HintPath>C:/dev/games/Warp/Warp_UnityProject/Assets/Scripts/UnityEditor.Expose.dll</HintPath>
     </Reference>
     <Reference Include="WarpSpace">
-      <HintPath>/Users/dmitrijegorov/dev/games/IsometricWarp/Warp_UnityProject/Assets/Scripts/WarpSpace.dll</HintPath>
+      <HintPath>C:/dev/games/Warp/Warp_UnityProject/Assets/Scripts/WarpSpace.dll</HintPath>
     </Reference>
     <Reference Include="WarpSpace.Models">
-      <HintPath>/Users/dmitrijegorov/dev/games/IsometricWarp/Warp_UnityProject/Assets/Scripts/WarpSpace.Models.dll</HintPath>
+      <HintPath>C:/dev/games/Warp/Warp_UnityProject/Assets/Scripts/WarpSpace.Models.dll</HintPath>
     </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
