--- a/src/WarpSpace/WarpSpace.csproj
+++ b/src/WarpSpace/WarpSpace.csproj
@@ -55,8 +55,9 @@
     <Compile Include="Common\MeshTransformation\MeshTransformer.cs" />
     <Compile Include="Common\Spacial2DData.cs" />
     <Compile Include="Experiment\TileTransformer.cs" />
-    <Compile Include="Game\Battle\BoardData.cs" />
-    <Compile Include="Game\Battle\Tile\HighlightElement.cs" />
+    <Compile Include="Game\Battle\BoardGenerators\BoardSettings.cs" />
+    <Compile Include="Game\Battle\BoardGenerators\PredefinedBoard.cs" />
+    <Compile Include="Game\Battle\BoardGenerators\RandomBoard.cs" />
     <Compile Include="Game\Battle\Tile\HighlightType.cs" />
     <Compile Include="Game\Battle\Tile\Landscape.cs" />
     <Compile Include="Game\Battle\Tile\PlayerActionSource.cs" />
@@ -64,19 +65,19 @@
     <Compile Include="Game\Battle\Tile\TileComponent.cs" />
     <Compile Include="Game\Battle\Tile\UnitSlot.cs" />
     <Compile Include="Game\Battle\Tile\Water.cs" />
+    <Compile Include="Game\Battle\Tile\WHighlight.cs" />
+    <Compile Include="Game\Battle\Unit\WOutliner.cs" />
     <Compile Include="Game\Battle\Unit\WLimbo.cs" />
-    <Compile Include="Overlay\Units\OOutliner.cs" />
+    <Compile Include="Game\WGame.cs" />
+    <Compile Include="Overlay\OBoard.cs" />
     <Compile Include="Overlay\Units\OPixelPerfectPanel.cs" />
     <Compile Include="Overlay\Units\OPointsCounter.cs" />
     <Compile Include="Overlay\Units\OUnit.cs" />
-    <Compile Include="Overlay\Units\OUnits.cs" />
-    <Compile Include="Overlay\Units\OutlineMeshBuilder.cs" />
+    <Compile Include="Overlay\Units\MeshSimplifier.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\UnityRandom.cs" />
     <Compile Include="Game\Battle\Board\WBoard.cs" />
     <Compile Include="Game\Battle\Board\TileCreationHelper.cs" />
-    <Compile Include="Game\Battle\BattleComponent.cs" />
-    <Compile Include="Game\Battle\SettingsConversionExtensions.cs" />
     <Compile Include="Game\Battle\Unit\UnitMesh.cs" />
     <Compile Include="Game\Battle\Unit\WMover.cs" />
     <Compile Include="Game\Battle\Unit\WUnit.cs" />
