the units wait for each other for docking and undocking

--- a/src/Lanski.SwiftLinq/Lanski.SwiftLinq.csproj
+++ b/src/Lanski.SwiftLinq/Lanski.SwiftLinq.csproj
@@ -40,7 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EnumerateExtensions.cs" />
-    <Compile Include="LinqExyensions.cs" />
+    <Compile Include="LinqExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
